Set the chromehidden attribute earlier, so we don't have to reresolve style and redo layout on the whole window.  Bug 345560, r=sicking, sr=neil.